<resources>
    <string name="app_name">Practice</string>
    <string name="title_activity_pay">PayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="otp">OTP Верификация</string>
    <string name="number">Введите ваш номер</string>
    <string name="_7">+7-</string>
    <string name="_1234567890">1234567890</string>
</resources>