<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendOtpActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/otp"
          />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/otp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:text="Мы отправим вам код подтвердения"
            android:layout_marginEnd="50dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:layout_marginStart="30dp"
            android:layout_gravity="center"
            android:text="@string/number"
            android:textSize="14sp"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:text="@string/_7"
                android:layout_marginLeft="50dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/_1234567890"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:background="@null" />
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/btnVerifyс"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:backgroundTint="?android:attr/colorPressedHighlight"
        android:text="Получить код" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_height="40dp" />
</FrameLayout>


    </LinearLayout>

</ScrollView>